src/test/deca/syntax/parser/invalid/return_void.deca
// test de parser, le return est vide

{
    return ;
}